--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <p class="card-text">Pabst Blue Ribbon is brewed in the finest traditions of an American Premium Lager dating back to 1844. Brewed with a combination of 2 & 6-row malted barley, select cereal grains and American and European
                   hops, Pabst Blue Ribbon is fermented with a proprietary lager yeast.</p>
                   <input class="form-check-input" type="checkbox" name="beers" value="2.00" data-value2="PBR">
-                  <label class="form-check-label" for="PBR">Check here to add to order!</label>
+                  <label class="form-check-label" for="PBR">Click to add to order!</label>
                 </div>
               </div>
             </div>
@@ -103,7 +103,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">FEMSA - Cuauhtémoc-Moctezuma (Heineken) <br>4.60% ABV<br>$2.00</h6>
                     <p class="card-text">A Lager beer with a delicious aroma of malt and hops and a delicate balance in its subtle refreshing taste.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="2.00" data-value2="Tecate">
-                    <label class="form-check-label" for="Tecate">Check here to add to order!</label>
+                    <label class="form-check-label" for="Tecate">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -117,7 +117,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Hopworks Urban Brewing<br>5.10% ABV<br>$5.00</h6>
                     <p class="card-text">Grainy, golden, 100% organin, formerly draft only brew spiced with Zeus hops.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="Hopworks Urban Brewing">
-                    <label class="form-check-label" for="Hopworks-Urban-Brewing">Check here to add to order!</label>
+                    <label class="form-check-label" for="Hopworks-Urban-Brewing">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -134,7 +134,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Breakside Brewing<br>5.30% ABV<br>$5.00</h6>
                     <p class="card-text">Easy pilsner with biscuit-like maltiness and a light, tangy, citrusy kick.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="Breakside Pilsner">
-                    <label class="form-check-label" for="Breakside-Pilsner">Check here to add to order!</label>
+                    <label class="form-check-label" for="Breakside-Pilsner">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -148,7 +148,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Ninkasi Brewing Co <br>5.10% ABV<br>$4.50</h6>
                     <p class="card-text">Malt forward, German-style pilsner with spicy, crackling hop notes.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="4.50" data-value2="Ninkasi Pilsner">
-                    <label class="form-check-label" for="Ninkasi-Pilsner">Check here to add to order!</label>
+                    <label class="form-check-label" for="Ninkasi-Pilsner">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -162,7 +162,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Deschutes Brewery<br>4.0% ABV<br>$4.00</h6>
                     <p class="card-text">Sociably low-alcohol with ample Cascade and Crystal hops kick this light golden ale up a notch.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="4.00" data-value2="River Ale">
-                    <label class="form-check-label" for="River-Ale">Check here to add to order!</label>
+                    <label class="form-check-label" for="River-Ale">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -180,7 +180,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Double Mountain Brewery<br>6.0% ABV<br>$5.00</h6>
                     <p class="card-text">Hazy-gold with a sweet, grainy start and a dry, lemony finish.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="Vaporizer">
-                    <label class="form-check-label" for="vaporizer">Check here to add to order!</label>
+                    <label class="form-check-label" for="vaporizer">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -194,7 +194,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Boneyard Brewing Co <br>7.00% ABV<br>$5.00</h6>
                     <p class="card-text">Massive hop flavors. Juicy, citrusy taste, faint cereal sweetness, and clean, crisp finish.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="RPM">
-                    <label class="form-check-label" for="RPM">Check here to add to order!</label>
+                    <label class="form-check-label" for="RPM">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -208,7 +208,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Hair of the Dog Brewing Co<br>6.0% ABV<br>$5.00</h6>
                     <p class="card-text">Brawny and resinously hoppy without the acrid finish that can mar lesser interpretations</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="Blue Dot">
-                    <label class="form-check-label" for="blue-dot">Check here to add to order!</label>
+                    <label class="form-check-label" for="blue-dot">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -226,7 +226,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Long Brewery<br>6.20% ABV<br>$5.00</h6>
                     <p class="card-text">Paul Long’s one-man wine country operation is proof that big brews can come from small places. His American-style IPA, brewed and dry-hopped with six hop varieties, bursts with bright, floral, tropical notes.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="IPA">
-                    <label class="form-check-label" for="IPA">Check here to add to order!</label>
+                    <label class="form-check-label" for="IPA">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -240,7 +240,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Deschutes Brewery <br>5.60% ABV<br>$4.00</h6>
                     <p class="card-text">Named for a legendary mountain bike race, this delicious cloudy-gold ale is a lovely hybrid of Belgian wit—orange peel and coriander-spiced—and tangy, Northwest-style IPA.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="4.00" data-value2="Chainbreaker">
-                    <label class="form-check-label" for="chainbreaker">Check here to add to order!</label>
+                    <label class="form-check-label" for="chainbreaker">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -254,7 +254,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Hair of the Dog Brewing Co<br>6.0% ABV<br>$5.00</h6>
                     <p class="card-text">Brawny and resinously hoppy without the acrid finish that can mar lesser interpretations</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="Whole in the head">
-                    <label class="form-check-label" for="blue-dot">Check here to add to order!</label>
+                    <label class="form-check-label" for="blue-dot">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -271,7 +271,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Caldera Brewing Co<br>5.40% ABV<br>$3.75</h6>
                     <p class="card-text">A bready, slightly honeyish brew with a mellow, herbaceous tang, this isn’t a complex beer—but it is super-smooth and satisfying on cool Oregon summer nights.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="3.75" data-value2="Ashland">
-                    <label class="form-check-label" for="Ashland">Check here to add to order!</label>
+                    <label class="form-check-label" for="Ashland">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -285,7 +285,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Widmer Brothers Brewing <br>9.50% ABV<br>$6.75</h6>
                     <p class="card-text">Caribbean mainstays like blackstrap molasses and palm sugar amp up this approximately English-style brown aged in Puerto Rican rum barrels and spiced with fruity Calypso hops.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="6.75" data-value2="Kill Devil">
-                    <label class="form-check-label" for="kill-devil">Check here to add to order!</label>
+                    <label class="form-check-label" for="kill-devil">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -299,7 +299,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">North Coast Brewing<br>9.40% ABV<br>$9.00</h6>
                     <p class="card-text">The beer is being released in conjunction with the Thelonious Monk Institute of Jazz, and the brewery will make a contribution to the Institute for every case sold to support jazz education.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="9.00" data-value2="Brother Thelonious">
-                    <label class="form-check-label" for="brother-Thelonious">Check here to add to order!</label>
+                    <label class="form-check-label" for="brother-Thelonious">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -318,7 +318,7 @@
                       impressive
                       kick.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="9.50" data-value2="Peche">
-                    <label class="form-check-label" for="Peche">Check here to add to order!</label>
+                    <label class="form-check-label" for="Peche">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -332,7 +332,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Cascade Barrel House <br>8.50% ABV<br>$6.75</h6>
                     <p class="card-text">Bright and hazy orange with a zingy, lemony tartness up front, this Belgian-style ale flows with waves of delicious, ripe apricot flavor.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="6.75" data-value2="Apricot Sour">
-                    <label class="form-check-label" for="apricot-sour">Check here to add to order!</label>
+                    <label class="form-check-label" for="apricot-sour">Click to add to order!</label>
                   </div>
                 </div>
               </div>
@@ -346,7 +346,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Burnside Brewing Co<br>4.90% ABV<br>$5.00</h6>
                     <p class="card-text">Lesser chile beers crash the palate party and leave. But Burnside’s is brewed with apricot purée and Scotch bonnet peppers, which supply a lingering, welcome heat.</p>
                     <input class="form-check-input" type="checkbox" name="beers" value="4.90" data-value2="Sweet Heat">
-                    <label class="form-check-label" for="sweet-heat">Check here to add to order!</label>
+                    <label class="form-check-label" for="sweet-heat">Click to add to order!</label>
                   </div>
                 </div>
               </div>
